[package]
name = "robot-system-ng"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo Consoni <beppe.info@example.com>"]
description = "Robotic real-time control application for rehabilitation purposes (Rust port of RobotSystem-Lite)"
license = "LGPL-3.0"

[workspace]
members = [
    ".",
    "crates/data-logging",
    "crates/kalman-filter", 
    "crates/plugin-loader",
    "crates/robot-control-interface",
    "crates/signal-io-interface",
    "crates/signal-processing",
    "crates/multithreading",
    "crates/precise-timing",
    "crates/system-linearizer",
    "crates/data-io",
    "crates/ipc-interface",
]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and linear algebra
nalgebra = "0.32"
ndarray = "0.15"
blas-src = { version = "0.10", features = ["openblas"] }
lapack-src = { version = "0.8", features = ["openblas"] }

# IPC and networking
zmq = "0.10"
shared_memory = "0.12"
mio = "0.8"

# Plugin system
libloading = "0.8"
abi_stable = "0.11"

# Expression evaluation
evalexpr = "11.0"

# Timing and real-time
spin_sleep = "1.1"

# Configuration
config = "0.14"

# Workspace crates
data-logging = { path = "crates/data-logging" }
kalman-filter = { path = "crates/kalman-filter" }
plugin-loader = { path = "crates/plugin-loader" }
robot-control-interface = { path = "crates/robot-control-interface" }
signal-io-interface = { path = "crates/signal-io-interface" }
signal-processing = { path = "crates/signal-processing" }
multithreading = { path = "crates/multithreading" }
precise-timing = { path = "crates/precise-timing" }
system-linearizer = { path = "crates/system-linearizer" }
data-io = { path = "crates/data-io" }
ipc-interface = { path = "crates/ipc-interface" }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "robot-system-ng"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1